# gdid-tool

./: README.md  build-exe.ps1  gdid-config.json  gdid-tool.bat  gdid-tool.ps1
gdid-hook-dll/: CMakeLists.txt  README.md  dllmain.cpp  hook.h
